# MagicPaste

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  README_CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
docs/: index.html
gui/electron/: electron-builder.yml  main.js  package.json  preload.js
gui/electron/assets/: app_icon.icns
gui/electron/renderer/: guide.css  guide.html  index.html  renderer.js  settings.css  settings.html  settings.js  styles.css  tray_hint.css  tray_hint.html
gui/electron/scripts/: patch_site_packages_zip.py  prepare-runtime.js  sign-python-frameworks.js
magic_paste/: __init__.py  i18n.py  main.py
magic_paste/clipboard/: __init__.py  reader.py
magic_paste/config/: __init__.py  keywords.yaml  settings.yaml
magic_paste/context/: __init__.py  detector.py  schema.py
magic_paste/pipeline/: __init__.py  orchestrator.py  renderer.py  types.py
magic_paste/prompts/: __init__.py  loader.py
magic_paste/prompts/system/: default.md  stage1.md  stage2.md
magic_paste/prompts/templates/: stage1_user.md  stage2_user.md  tool_window.md
magic_paste/server/: __init__.py  app.py
magic_paste/services/: __init__.py  model_client.py
magic_paste/utils/: __init__.py  config_loader.py
native/: Package.swift  window_inspector.swift
native/Sources/ContextProbe/: main.swift
native/Sources/MagicPasteNative/: ClipboardBridge.swift  ContextWatcher.swift  FrontWindowResolver.swift  HotkeyManager.swift  NativeIPC.swift  main.swift
